# cp_framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  buildDoxygen.bat  vcpkg-configuration.json  vcpkg.json
docs/: mainpage.dox
docs/html/: algorithm_8cpp.html  algorithm_8cpp__incl.map  algorithm_8cpp__incl.md5  algorithm_8cpp_source.html  algorithm_8hpp.html  algorithm_8hpp__dep__incl.map  algorithm_8hpp__dep__incl.md5  algorithm_8hpp__incl.map  algorithm_8hpp__incl.md5  algorithm_8hpp_source.html  annotated.html  classcp_1_1_debug-members.html  classcp_1_1_debug.html  classcp_1_1_serializable_base-members.html  classcp_1_1_serializable_base.html  classcp_1_1_thread_pool-members.html  classcp_1_1_thread_pool.html  classcp_1_1algorithm_1_1_m_d5-members.html  classcp_1_1algorithm_1_1_m_d5.html  classcp_1_1filesystem_1_1_m_map_file-members.html  classcp_1_1filesystem_1_1_m_map_file.html  classes.html  compression_8cpp.html  compression_8cpp__incl.map  compression_8cpp__incl.md5  compression_8cpp_source.html  compression_8hpp.html  compression_8hpp__dep__incl.map  compression_8hpp__dep__incl.md5  compression_8hpp__incl.map  compression_8hpp__incl.md5  compression_8hpp_source.html  core_8minimal_8cpp.html  core_8minimal_8cpp__incl.map  core_8minimal_8cpp__incl.md5  core_8minimal_8cpp_source.html  core_8minimal_8hpp.html  core_8minimal_8hpp__dep__incl.map  core_8minimal_8hpp__dep__incl.md5  core_8minimal_8hpp__incl.map  (+142 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+52 more)
include/cp_framework/: core.hpp  core.minimal.hpp  debug.hpp  filesystem.hpp  framework.hpp
include/cp_framework/core/: algorithm.hpp  compression.hpp  core.minimal.hpp  debug.hpp  delegate.hpp  diagnostics.hpp  events.hpp  export.hpp  filesystem.hpp  gameTime.hpp  hybridEvents.hpp  math.hpp  security.hpp  serializable.hpp  threadPool.hpp  types.hpp
include/cp_framework/debug/: debug.hpp  diagnostics.hpp
include/cp_framework/events/: delegate.hpp  eventSystem.hpp  events.hpp  hybridEvents.hpp
include/cp_framework/filesystem/: compression.hpp  filesystem.hpp
include/cp_framework/graphics/: window.hpp
include/cp_framework/graphics/vulkan/: vkTypes.hpp
include/cp_framework/input/: inputManager.hpp
include/cp_framework/math/: math.hpp
include/cp_framework/security/: security.hpp
include/cp_framework/serialization/: serializable.hpp
include/cp_framework/systems/: eventSystem.hpp
include/cp_framework/threading/: threadPool.hpp
include/cp_framework/time/: gameTime.hpp
include/cp_framework/vulkan/: buffer.hpp  commandPool.hpp  debugMessenger.hpp  descriptorPool.hpp  device.hpp  image.hpp  instance.hpp  manager.hpp  physicalDevice.hpp  stagingRing.hpp  surface.hpp  swapchain.hpp  texture.hpp  types.hpp  utils.hpp  vkManager.hpp  vma.hpp
include/cp_framework/window/: window.hpp  windowEvents.hpp
include/cp_framework/world/: world.hpp
src/: core.cpp  core.minimal.cpp  debug.cpp  dllmain.cpp  filesystem.cpp  framework.cpp
src/core/: algorithm.cpp  compression.cpp  core.minimal.cpp  debug.cpp  delegate.cpp  diagnostics.cpp  events.cpp  export.cpp  filesystem.cpp  gameTime.cpp  hybridEvents.cpp  math.cpp  security.cpp  serializable.cpp  threadPool.cpp  types.cpp
src/debug/: debug.cpp  diagnostics.cpp
src/events/: delegate.cpp  eventSystem.cpp  events.cpp  hybridEvents.cpp
src/filesystem/: compression.cpp  filesystem.cpp
src/graphics/: window.cpp
src/graphics/vulkan/: vkTypes.cpp
src/input/: inputManager.cpp
src/math/: math.cpp
src/security/: security.cpp
src/serialization/: serializable.cpp
src/systems/: eventSystem.cpp
src/threading/: threadPool.cpp
src/time/: gameTime.cpp
src/vulkan/: buffer.cpp  commandPool.cpp  debugMessenger.cpp  descriptorPool.cpp  device.cpp  image.cpp  instance.cpp  manager.cpp  physicalDevice.cpp  stagingRing.cpp  surface.cpp  swapchain.cpp  texture.cpp  utils.cpp  vkManager.cpp  vma.cpp
src/window/: window.cpp  windowEvents.cpp
src/world/: world.cpp
test/: test_main.cpp
tools/plantuml/: README.md
